Fix autocomplete z-indexing.

--- a/media/less/messages.less
+++ b/media/less/messages.less
@@ -407,3 +407,8 @@ div.editor {
     text-decoration: underline;
   }
 }
+
+.ui-front {
+  // The kbox this needs to hover over has z-index 1000.
+  z-index: 1001;
+}
